@@ -1,6 +1,10 @@
   31 Jan 2013; Stijn Tintel <stijn+gentoo@linux-ipv6.be> cgminer-2.9.5.ebuild:
   Depend on virtual/udev instead of sys-fs/udev.
 
+  03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
+  cgminer-3.1.0.ebuild:
+  Remove cpumining and related USE flags.
+
 *cgminer-3.1.0 (03 May 2013)
 
   03 May 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
